--- a/skillmatch-ai-frontend/vercel.json
+++ b/skillmatch-ai-frontend/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": "pnpm install && pnpm run build",
+  "outputDirectory": "dist/skillsmatch-ai",
   "routes": [
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
